fix link icon was not aligned anymore

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -474,7 +474,7 @@ tr.level12 td.label {
 .dataTableActions table.dataTable img.link {
   margin-right: 0.5em;
   margin-left: 0;
-  margin-top: -5px;
+  margin-bottom: 4px;
   vertical-align: text-bottom;
 }
 
